--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is heading</h1>
+    <h1>This is heading {dropdown}</h1>
 </body>
 </html>
